--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -257,3 +257,55 @@
 #testimonials .max-w-5xl > h3 {
     display: none;
 }
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+    10% {
+        transform: translateX(-5px) rotate(-1deg);
+    }
+    20% {
+        transform: translateX(5px) rotate(1deg);
+    }
+    30% {
+        transform: translateX(-5px) rotate(-1deg);
+    }
+    40% {
+        transform: translateX(5px) rotate(1deg);
+    }
+    50% {
+        transform: translateX(-5px) rotate(-1deg);
+    }
+    60% {
+        transform: translateX(5px) rotate(1deg);
+    }
+    70% {
+        transform: translateX(-5px) rotate(-1deg);
+    }
+    80% {
+        transform: translateX(5px) rotate(1deg);
+    }
+    90% {
+        transform: translateX(-5px) rotate(-1deg);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.shake-effect {
+    animation: shake 0.8s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+
+@keyframes dash {
+    to {
+        stroke-dashoffset: -24;
+    }
+}
+.animate-dash {
+    animation: dash 20s linear infinite;
+}
+.transform-gpu {
+    transform: translateZ(0);
+}
